[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.92",
    "pillow>=11.3.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

# 1. Ваш локальный сервер (по умолчанию)
[[tool.uv.index]]
url = "http://172.16.0.46:5000/index/"
default = false

# 2. Официальный PyPI (как запасной, если на локальном чего-то нет)
[[tool.uv.index]]
url = "https://pypi.org/simple"
